# BOUT-lin-dev

./: .gitignore  CMakeLists.txt  config_cmd.sh
examples/conduction/: CMakeLists.txt  conduction.cxx
examples/conduction/data/: BOUT.inp  T-evolution.py
examples/gcrz_dust/: Csplines.cxx  checkpoly.cxx  cylinder.cxx  cylinder.h  edison_debug.pbs  gcrz.cxx  gcrz_orbit.cxx  genphi.m  genphi.pro  interp2d.cxx  makefile  pnpoly.cxx  randomwalk.cxx  xglobal.cxx  xorbit.pro  xphi.pro
examples/gcrz_dust/data/: BOUT.inp  east056129.05550_psi085to105_x260y64.nc  east056129.05550_psi085to105_x260y64_Vi_phi.nc  east67238.grd.nc  g038300.03000  g056129.05550_1  g056129.05550_2  g056129.05550_2_x260y64_psi090to106_thermalSBC.nc  g067238.06118  g1100223012.01149_261  g38300_132X64_0.9-1.02.nc
